--- a/css/layout.css
+++ b/css/layout.css
@@ -1132,7 +1132,7 @@ float: left;
 
 .perso img{width: 100%;}
 .uni_windo, .para-slide{
-  background-attachment: fixed;
+  background-attachment: fixed!important;
     background-size: 100%;
 }
 
